assets/styles.css
main {
	display: grid;
	place-items: center;
}

body {
	background-color: #37555B;
	margin: 0px;
}

h1 {
	font-family: 'Lobster Two', cursive;
	font-size: 64px;
	color: #DDD6B6;
}

h3 {
	text-align: center;
	font-family: 'Courier Prime', monospace;
	font-size: 48px;
	color: #ABC99E;
}

p{
	
	font-family: 'Courier Prime', monospace;
	font-size: 24px;
}


ul {
	list-style-type: none;
	 margin: 0;
	 padding: 0;
	 overflow: hidden;
}

ul li{
	float: left;
}

ul li a {
	display: block;
	color: #ABC99E;
	text-align: center;
	padding: 14px 16px;
	text-decoration: none;
}

/* class */



/*.center{
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 0;
}
*/



/* id */

.about { 
	display: flex;
	background-color: #74948C;
	padding: 90px 68px 119px 68px;
	width: 1600px;
	height: 936px;
	margin: 100px;
	outline-style: solid;
	outline-width: 1px; 
	border-radius: 4px;
	
}

#about-text {
	/*
	flex: 1 1 10;
	*/
	display: inline-block;
    width: 46%;
    @media (max-width: 620px) {
      width: 100%;
    }
	
}

#about-image {
	/*
	margin: 52px 30px 0 50px;
	width: 566px;
    object-fit: contain;
    align-self: flex-start;
	*/
	display: inline-block;
	margin: 52px 30px 0 70px;
    vertical-align: top;
    width: 46%;
	
}



#project {
	background-color: #CA7C4C;
	padding: 119px 68px 119px 68px;
	width: 660px;
	height: 750px;
	margin: 100px;
	outline-style: solid;
	outline-width: 1px;
}

#navbar{
	text-align: center;
	display: flex; 
	justify-content: center;
	align-items: center;
	box-shadow: 0 5px 4px 0 rgba(0,0,0,.2);
	position: fixed; /* Set the navbar to fixed position */
	top: 0; /* Position the navbar at the top of the page */
	width: 100%; /* Full width */
	background-color: #578088;
}

#navbar a {
	font-family: 'Courier Prime', monospace;
	text-shadow: 2px 2px #37555B;
	font-size: 24px;
}

#profile-img {
	
    
}

